--- a/manifest.json
+++ b/manifest.json
@@ -11,6 +11,11 @@
         "src": "/images/icons/icon-512x512.png",
         "type": "image/png", "sizes": "512x512",
         "purpose": "any maskable"
+      },
+      {
+        "src": "/images/icons/icon-192x192.png",
+        "type": "image/png", "sizes": "192x192",
+        "purpose": "any maskable"
       }
     ]
   }
