set purpose attribute to any

--- a/manifest.json
+++ b/manifest.json
@@ -15,7 +15,7 @@
       {
         "src": "/images/icons/icon-192x192.png",
         "type": "image/png", "sizes": "192x192",
-        "purpose": "any maskable"
+        "purpose": "any"
       }
     ]
   }
